/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Exception.java to edit this template
 */
package project.exception;

/**
 *
 * @author nancy
 */
public class InsertVariableException extends Exception{

    /**
     * Creates a new instance of <code>InsertVariableException</code> without
     * detail message.
     */
    public InsertVariableException() {
    }

    /**
     * Constructs an instance of <code>InsertVariableException</code> with the
     * specified detail message.
     *
     * @param msg the detail message.
     */
    public InsertVariableException(String msg) {
        super(msg);
    }
}
