@startuml classDiagramm
skinparam shadowing true
title Calculator Class Diagramm 

class stackNum{
    - LinkedList <> stackNum
    + push() : void 
    + top() : Complex
    + stackPrint() : void
    + stackFilter(stackNum s) : LinkedList<Complex>
}

class manipolazioneStack{
    + drop() : Complex
    + dup() : void
    + clear() : void
    + over() : void
    + swap() : void
}

class CUI{
    + launch(args) : void
}

interface inserisciNumero{
    + inserisci(String var) : Complex 

}

class complex{
    - real : double
    - imaginary : double
    + Complex(double real,double imaginary)
    + setReal(double newReal) : void 
    + setImaginary(double newImaginary) : void
    + getReal() : double
    + getImaginary() : double
    + toString() : String
}

class inserisciOperazioni{
    + add(Complex c1, Complex c2) : void
    + sub(Complex c1, Complex c2) : void 
    + mult(Complex c1,Complex c2) : void
    + div(Complex c1, Complex c2) : void
    + sqrt(Complex c) : void
    + invSign(Complec c) : void
}

class operazioniVariabili{
    - LinkedHashMap <char k, Complex c> vars
    + maggX(Complex c,String var) : void
    + minX(Complex c, String var) : void
    + plusX(String var) : Complex
    + minus(String var) : Complex
}

class Exception{
    + print(msgError) : void
}

class emptyStackException{

}

class insertVariableException{

}

class wrongNumberException{

}

class arithmeticException{

}


CUI ..> stackNum : 1..1
manipolazioneStack --|> stackNum
inserisciNumero ..> stackNum : 1..1
inserisciOperazioni ..> stackNum : 1..1
operazioniVariabili ..> stackNum : 1..1
complex ..> inserisciNumero : 1..*

emptyStackException --|> Exception
insertVariableException --|> Exception
wrongNumberException --|> Exception
arithmeticException --|> Exception
@enduml